--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MediaListActivity">
+        </activity>
+
+        <activity android:name=".MediaItemPlay">
+        </activity>
     </application>
 
 </manifest>
