--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:configChanges="orientation|screenSize|keyboardHidden" >
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MediaListActivity"></activity>
+        <activity android:name=".MediaItemPlay"></activity>
 
-        <activity android:name=".MediaListActivity">
-        </activity>
+        <service
+            android:name=".MyBackgroundService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
 
-        <activity android:name=".MediaItemPlay">
-        </activity>
     </application>
 
 </manifest>
